[gd_scene load_steps=7 format=4 uid="uid://cyptfcrxg17lf"]

[ext_resource type="Script" path="res://scripts/ui/settings.gd" id="1_cldl8"]
[ext_resource type="TileSet" uid="uid://vrst3418t234" path="res://sprites/locations/dungeon/dungeon.tres" id="3_k8v1f"]
[ext_resource type="PackedScene" uid="uid://dhypra51fogdw" path="res://scenes/ui/settings_input_buttons.tscn" id="4_6enku"]
[ext_resource type="FontFile" uid="uid://1mina24aowrb" path="res://fonts/DungeonFont.ttf" id="4_6ye7w"]

[sub_resource type="LabelSettings" id="LabelSettings_7crbw"]
font = ExtResource("4_6ye7w")
font_size = 18
font_color = Color(1, 1, 1, 0.588235)

[sub_resource type="LabelSettings" id="LabelSettings_bbd50"]
font = ExtResource("4_6ye7w")
font_size = 32

[node name="Settings" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_cldl8")

[node name="TileMapLayer" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAAAAAAAAAACAAYAAAAAAAEAAAACAAcAAAAAAAIAAAABAAYAAAAAAAMAAAACAAcAAAAAAAQAAAABAAYAAAAAAAUAAAACAAcAAAAAAAYAAAABAAYAAAAAAAcAAAACAAYAAAAAAAgAAAACAAcAAAAAAAkAAAABAAYAAAAAAAoAAAACAAcAAAAAAAsAAAABAAYAAAAAAAwAAAABAAYAAAAAAA0AAAABAAYAAAAAAA4AAAACAAcAAAABAAAAAAABAAcAAAABAAEAAAABAAcAAAABAAIAAAACAAYAAAABAAMAAAACAAYAAAABAAQAAAABAAYAAAABAAUAAAACAAcAAAABAAYAAAABAAYAAAABAAcAAAABAAcAAAABAAgAAAACAAYAAAABAAkAAAABAAYAAAABAAoAAAACAAYAAAABAAsAAAACAAYAAAABAAwAAAACAAcAAAABAA0AAAABAAcAAAABAA4AAAACAAcAAAACAAAAAAABAAYAAAACAAEAAAACAAcAAAACAAIAAAACAAYAAAACAAMAAAABAAcAAAACAAQAAAACAAcAAAACAAUAAAACAAcAAAACAAYAAAABAAYAAAACAAcAAAABAAcAAAACAAgAAAACAAcAAAACAAkAAAACAAYAAAACAAoAAAACAAcAAAACAAsAAAABAAYAAAACAAwAAAABAAYAAAACAA0AAAABAAcAAAACAA4AAAACAAYAAAADAAAAAAABAAYAAAADAAEAAAABAAcAAAADAAIAAAACAAYAAAADAAMAAAACAAcAAAADAAQAAAACAAcAAAADAAUAAAABAAcAAAADAAYAAAACAAYAAAADAAcAAAABAAcAAAADAAgAAAACAAYAAAADAAkAAAABAAYAAAADAAoAAAABAAYAAAADAAsAAAABAAcAAAADAAwAAAABAAYAAAADAA0AAAACAAYAAAADAA4AAAACAAcAAAAEAAAAAAABAAYAAAAEAAEAAAACAAYAAAAEAAIAAAABAAcAAAAEAAMAAAACAAcAAAAEAAQAAAABAAcAAAAEAAUAAAACAAcAAAAEAAYAAAABAAcAAAAEAAcAAAACAAYAAAAEAAgAAAABAAYAAAAEAAkAAAABAAYAAAAEAAoAAAACAAYAAAAEAAsAAAACAAcAAAAEAAwAAAABAAYAAAAEAA0AAAABAAYAAAAEAA4AAAABAAYAAAAFAAAAAAACAAYAAAAFAAEAAAACAAYAAAAFAAIAAAABAAYAAAAFAAMAAAACAAYAAAAFAAQAAAABAAcAAAAFAAUAAAACAAYAAAAFAAYAAAACAAcAAAAFAAcAAAABAAYAAAAFAAgAAAABAAcAAAAFAAkAAAACAAcAAAAFAAoAAAACAAYAAAAFAAsAAAACAAYAAAAFAAwAAAACAAcAAAAFAA0AAAACAAYAAAAFAA4AAAACAAYAAAAGAAAAAAABAAcAAAAGAAEAAAACAAYAAAAGAAIAAAABAAcAAAAGAAMAAAACAAcAAAAGAAQAAAABAAcAAAAGAAUAAAABAAcAAAAGAAYAAAACAAYAAAAGAAcAAAACAAYAAAAGAAgAAAABAAYAAAAGAAkAAAACAAYAAAAGAAoAAAABAAYAAAAGAAsAAAACAAcAAAAGAAwAAAACAAcAAAAGAA0AAAABAAcAAAAGAA4AAAABAAcAAAAHAAAAAAABAAYAAAAHAAEAAAABAAcAAAAHAAIAAAABAAcAAAAHAAMAAAACAAcAAAAHAAQAAAABAAcAAAAHAAUAAAACAAYAAAAHAAYAAAABAAYAAAAHAAcAAAABAAcAAAAHAAgAAAACAAYAAAAHAAkAAAABAAcAAAAHAAoAAAABAAcAAAAHAAsAAAABAAcAAAAHAAwAAAACAAYAAAAHAA0AAAABAAcAAAAHAA4AAAACAAYAAAAIAAAAAAACAAcAAAAIAAEAAAACAAYAAAAIAAIAAAACAAYAAAAIAAMAAAABAAcAAAAIAAQAAAACAAYAAAAIAAUAAAABAAYAAAAIAAYAAAABAAcAAAAIAAcAAAABAAYAAAAIAAgAAAACAAcAAAAIAAkAAAABAAYAAAAIAAoAAAACAAcAAAAIAAsAAAABAAYAAAAIAAwAAAACAAcAAAAIAA0AAAABAAYAAAAIAA4AAAACAAcAAAAJAAAAAAABAAYAAAAJAAEAAAACAAYAAAAJAAIAAAACAAcAAAAJAAMAAAACAAcAAAAJAAQAAAABAAcAAAAJAAUAAAACAAcAAAAJAAYAAAABAAYAAAAJAAcAAAACAAYAAAAJAAgAAAABAAYAAAAJAAkAAAACAAYAAAAJAAoAAAABAAcAAAAJAAsAAAABAAYAAAAJAAwAAAACAAcAAAAJAA0AAAACAAcAAAAJAA4AAAACAAcAAAAKAAAAAAABAAYAAAAKAAEAAAABAAcAAAAKAAIAAAACAAYAAAAKAAMAAAABAAcAAAAKAAQAAAACAAYAAAAKAAUAAAABAAcAAAAKAAYAAAABAAYAAAAKAAcAAAABAAYAAAAKAAgAAAABAAYAAAAKAAkAAAACAAYAAAAKAAoAAAACAAcAAAAKAAsAAAABAAYAAAAKAAwAAAABAAcAAAAKAA0AAAACAAYAAAAKAA4AAAABAAcAAAALAAAAAAACAAcAAAALAAEAAAACAAcAAAALAAIAAAABAAYAAAALAAMAAAACAAcAAAALAAQAAAABAAcAAAALAAUAAAABAAcAAAALAAYAAAABAAcAAAALAAcAAAACAAcAAAALAAgAAAACAAYAAAALAAkAAAACAAYAAAALAAoAAAABAAcAAAALAAsAAAACAAYAAAALAAwAAAABAAcAAAALAA0AAAABAAYAAAALAA4AAAACAAcAAAAMAAAAAAACAAYAAAAMAAEAAAACAAcAAAAMAAIAAAACAAcAAAAMAAMAAAABAAcAAAAMAAQAAAABAAYAAAAMAAUAAAABAAYAAAAMAAYAAAABAAYAAAAMAAcAAAABAAYAAAAMAAgAAAACAAcAAAAMAAkAAAABAAcAAAAMAAoAAAACAAcAAAAMAAsAAAACAAcAAAAMAAwAAAABAAYAAAAMAA0AAAABAAcAAAAMAA4AAAACAAYAAAANAAAAAAABAAcAAAANAAEAAAACAAcAAAANAAIAAAACAAcAAAANAAMAAAACAAcAAAANAAQAAAACAAYAAAANAAUAAAABAAcAAAANAAYAAAABAAcAAAANAAcAAAABAAcAAAANAAgAAAABAAYAAAANAAkAAAACAAYAAAANAAoAAAACAAYAAAANAAsAAAACAAYAAAANAAwAAAACAAcAAAANAA0AAAABAAYAAAANAA4AAAACAAcAAAAOAAAAAAACAAcAAAAOAAEAAAACAAcAAAAOAAIAAAACAAYAAAAOAAMAAAABAAYAAAAOAAQAAAABAAcAAAAOAAUAAAABAAYAAAAOAAYAAAACAAYAAAAOAAcAAAABAAcAAAAOAAgAAAABAAcAAAAOAAkAAAABAAcAAAAOAAoAAAACAAcAAAAOAAsAAAABAAYAAAAOAAwAAAABAAcAAAAOAA0AAAABAAYAAAAOAA4AAAACAAYAAAAPAAAAAAABAAcAAAAPAAEAAAACAAcAAAAPAAIAAAABAAYAAAAPAAMAAAACAAcAAAAPAAQAAAACAAcAAAAPAAUAAAABAAcAAAAPAAYAAAACAAYAAAAPAAcAAAACAAcAAAAPAAgAAAACAAcAAAAPAAkAAAACAAYAAAAPAAoAAAABAAYAAAAPAAsAAAACAAcAAAAPAAwAAAABAAcAAAAPAA0AAAABAAcAAAAPAA4AAAACAAcAAAAQAAAAAAACAAcAAAAQAAEAAAABAAYAAAAQAAIAAAABAAYAAAAQAAMAAAABAAcAAAAQAAQAAAACAAcAAAAQAAUAAAACAAcAAAAQAAYAAAABAAcAAAAQAAcAAAACAAYAAAAQAAgAAAABAAYAAAAQAAkAAAABAAYAAAAQAAoAAAABAAYAAAAQAAsAAAACAAYAAAAQAAwAAAACAAcAAAAQAA0AAAABAAcAAAAQAA4AAAACAAcAAAARAAAAAAABAAcAAAARAAEAAAACAAYAAAARAAIAAAACAAYAAAARAAMAAAABAAcAAAARAAQAAAABAAcAAAARAAUAAAABAAYAAAARAAYAAAACAAcAAAARAAcAAAACAAYAAAARAAgAAAABAAcAAAARAAkAAAACAAcAAAARAAoAAAACAAcAAAARAAsAAAABAAcAAAARAAwAAAACAAYAAAARAA0AAAACAAYAAAARAA4AAAABAAYAAAASAAAAAAACAAYAAAASAAEAAAABAAYAAAASAAIAAAABAAYAAAASAAMAAAACAAYAAAASAAQAAAABAAYAAAASAAUAAAABAAYAAAASAAYAAAABAAcAAAASAAcAAAABAAcAAAASAAgAAAACAAcAAAASAAkAAAACAAYAAAASAAoAAAABAAYAAAASAAsAAAACAAcAAAASAAwAAAABAAcAAAASAA0AAAACAAcAAAASAA4AAAABAAYAAAATAAAAAAACAAYAAAATAAEAAAACAAcAAAATAAIAAAABAAYAAAATAAMAAAACAAcAAAATAAQAAAACAAcAAAATAAUAAAABAAcAAAATAAYAAAACAAYAAAATAAcAAAABAAYAAAATAAgAAAACAAcAAAATAAkAAAACAAcAAAATAAoAAAABAAcAAAATAAsAAAACAAcAAAATAAwAAAABAAYAAAATAA0AAAABAAcAAAATAA4AAAACAAYAAAA=")
tile_set = ExtResource("3_k8v1f")

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 2
offset_left = 14.0
offset_top = 53.0
offset_right = 626.0
offset_bottom = 479.0

[node name="MarginContainer" type="MarginContainer" parent="ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="SettingsContainer" type="VBoxContainer" parent="ScrollContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 10

[node name="VideoLabel" type="Label" parent="ScrollContainer/MarginContainer/SettingsContainer"]
layout_mode = 2
text = "Video
"
label_settings = SubResource("LabelSettings_7crbw")

[node name="FullscreenContainer" type="HBoxContainer" parent="ScrollContainer/MarginContainer/SettingsContainer"]
layout_mode = 2

[node name="FullscreenLabel" type="Label" parent="ScrollContainer/MarginContainer/SettingsContainer/FullscreenContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("4_6ye7w")
theme_override_font_sizes/font_size = 22
text = "Windowed Fullscreen
"

[node name="FullscreenCheckBox" type="CheckBox" parent="ScrollContainer/MarginContainer/SettingsContainer/FullscreenContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_6ye7w")
theme_override_font_sizes/font_size = 24
button_pressed = true

[node name="AudioLabel" type="Label" parent="ScrollContainer/MarginContainer/SettingsContainer"]
layout_mode = 2
text = "
Audio"
label_settings = SubResource("LabelSettings_7crbw")

[node name="MusicContainer" type="HBoxContainer" parent="ScrollContainer/MarginContainer/SettingsContainer"]
layout_mode = 2

[node name="MusicLabel" type="Label" parent="ScrollContainer/MarginContainer/SettingsContainer/MusicContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("4_6ye7w")
theme_override_font_sizes/font_size = 22
text = "Music volume"

[node name="MusicSlider" type="HSlider" parent="ScrollContainer/MarginContainer/SettingsContainer/MusicContainer"]
layout_mode = 2
size_flags_horizontal = 3
value = 100.0
scrollable = false

[node name="SFXContainer" type="HBoxContainer" parent="ScrollContainer/MarginContainer/SettingsContainer"]
layout_mode = 2

[node name="SFXLabel" type="Label" parent="ScrollContainer/MarginContainer/SettingsContainer/SFXContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("4_6ye7w")
theme_override_font_sizes/font_size = 22
text = "SFX volume"

[node name="SFXSlider" type="HSlider" parent="ScrollContainer/MarginContainer/SettingsContainer/SFXContainer"]
layout_mode = 2
size_flags_horizontal = 3
value = 100.0
scrollable = false

[node name="HBoxContainer" type="HBoxContainer" parent="ScrollContainer/MarginContainer/SettingsContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="ControlsLabel" type="Label" parent="ScrollContainer/MarginContainer/SettingsContainer/HBoxContainer"]
layout_mode = 2
text = "
Controls"
label_settings = SubResource("LabelSettings_7crbw")

[node name="ControlsLabel2" type="Label" parent="ScrollContainer/MarginContainer/SettingsContainer/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 1
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("4_6ye7w")
theme_override_font_sizes/font_size = 22
text = "Player 1"
vertical_alignment = 2

[node name="P1ActionList" type="VBoxContainer" parent="ScrollContainer/MarginContainer/SettingsContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Control" parent="ScrollContainer/MarginContainer/SettingsContainer/P1ActionList" instance=ExtResource("4_6enku")]
layout_mode = 2

[node name="Control2" parent="ScrollContainer/MarginContainer/SettingsContainer/P1ActionList" instance=ExtResource("4_6enku")]
layout_mode = 2

[node name="Control3" parent="ScrollContainer/MarginContainer/SettingsContainer/P1ActionList" instance=ExtResource("4_6enku")]
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="ScrollContainer/MarginContainer/SettingsContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="ControlsLabel" type="Label" parent="ScrollContainer/MarginContainer/SettingsContainer/HBoxContainer2"]
layout_mode = 2
text = "
Controls"
label_settings = SubResource("LabelSettings_7crbw")

[node name="ControlsLabel2" type="Label" parent="ScrollContainer/MarginContainer/SettingsContainer/HBoxContainer2"]
layout_mode = 2
size_flags_vertical = 1
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("4_6ye7w")
theme_override_font_sizes/font_size = 22
text = "Player 2"
vertical_alignment = 2

[node name="P2ActionList" type="VBoxContainer" parent="ScrollContainer/MarginContainer/SettingsContainer"]
layout_mode = 2

[node name="Control3" parent="ScrollContainer/MarginContainer/SettingsContainer/P2ActionList" instance=ExtResource("4_6enku")]
layout_mode = 2

[node name="Control4" parent="ScrollContainer/MarginContainer/SettingsContainer/P2ActionList" instance=ExtResource("4_6enku")]
layout_mode = 2

[node name="Control5" parent="ScrollContainer/MarginContainer/SettingsContainer/P2ActionList" instance=ExtResource("4_6enku")]
layout_mode = 2

[node name="TileMapLayer2" type="TileMapLayer" parent="."]
position = Vector2(0, -6)
tile_map_data = PackedByteArray("AAAAAAAAAAABAAcAAAAAAAEAAAACAAgAAAABAAAAAAABAAYAAAABAAEAAAACAAgAAAACAAAAAAACAAYAAAACAAEAAAABAAgAAAADAAAAAAACAAYAAAADAAEAAAABAAgAAAAEAAAAAAABAAYAAAAEAAEAAAABAAgAAAAFAAAAAAABAAcAAAAFAAEAAAABAAgAAAAGAAAAAAABAAYAAAAGAAEAAAABAAgAAAAHAAAAAAABAAYAAAAHAAEAAAACAAgAAAAIAAAAAAABAAYAAAAIAAEAAAABAAgAAAAJAAAAAAACAAYAAAAJAAEAAAACAAgAAAAKAAAAAAACAAcAAAAKAAEAAAABAAgAAAALAAAAAAABAAYAAAALAAEAAAABAAgAAAAMAAAAAAACAAYAAAAMAAEAAAACAAgAAAANAAAAAAACAAcAAAANAAEAAAACAAgAAAAOAAAAAAABAAcAAAAOAAEAAAABAAgAAAAPAAAAAAABAAYAAAAPAAEAAAACAAgAAAAQAAAAAAABAAcAAAAQAAEAAAACAAgAAAARAAAAAAACAAYAAAARAAEAAAABAAgAAAASAAAAAAABAAYAAAASAAEAAAACAAgAAAATAAAAAAACAAYAAAATAAEAAAABAAgAAAA=")
tile_set = ExtResource("3_k8v1f")

[node name="TitleLabel" type="Label" parent="."]
texture_filter = 1
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -115.0
offset_top = 15.0
offset_right = 127.0
offset_bottom = 48.0
grow_horizontal = 2
text = "Settings"
label_settings = SubResource("LabelSettings_bbd50")
horizontal_alignment = 1

[node name="BackButton" type="Button" parent="."]
layout_mode = 0
offset_left = 7.0
offset_top = 8.0
offset_right = 77.0
offset_bottom = 33.0
theme_override_fonts/font = ExtResource("4_6ye7w")
theme_override_font_sizes/font_size = 24
text = "Back (esc)
"

[node name="ResetButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 466.0
offset_top = -470.0
offset_right = 631.0
offset_bottom = -437.0
grow_vertical = 0
theme_override_fonts/font = ExtResource("4_6ye7w")
theme_override_font_sizes/font_size = 24
text = "Reset to Defaults"

[connection signal="toggled" from="ScrollContainer/MarginContainer/SettingsContainer/FullscreenContainer/FullscreenCheckBox" to="." method="on_fullscreen_check_box_toggled"]
[connection signal="drag_ended" from="ScrollContainer/MarginContainer/SettingsContainer/MusicContainer/MusicSlider" to="." method="on_music_slider_drag_ended"]
[connection signal="drag_ended" from="ScrollContainer/MarginContainer/SettingsContainer/SFXContainer/SFXSlider" to="." method="on_sfx_slider_drag_ended"]
[connection signal="pressed" from="BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="ResetButton" to="." method="on_reset_button_pressed"]
